2008-12-31 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSLayoutManager.h: Add some 10.5 methods.
	* Source/GSLayoutManager.m: Implement them.

2008-12-31 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSWindow.h: Use one of the spare ivars for toolbar.
	* Headers/AppKit/NSToolbar.h: Remove window ivar.
	* Source/NSWindow.m (-dealloc:): Unset the toolbar.
	* Source/NSWindow+Toolbar.m: Start to rewrite
	* Source/GSToolbar.m: Remove unused method declarations.
	* Source/GSToolbarView.m: Remove unused methods.
	* Source/NSToolbar.m: Remove all window related methods. Simplify
	the rest of the code.

2008-12-31 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow.m (-validateMenuItem:): Add validation for
	toolbar toggle method.

2008-12-30 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPrintOperation.m (_setupPrintInfo): Initialize
	viewPageRange before calling knowsPageRange:.

2008-12-30 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSToolbar.h (-_toolbars): Remove.
	* Source/NSWindow+Toolbar.m: Add [GSToolbar _toolbars] declaration
	here.
	* Source/GSToolbar.m,
	* Source/NSToolbar.m: Simplify by adding helper methods and
	removing dead code. 
	* Headers/AppKit/NSToolbarItemGroup.h,
	* Source/NSToolbarItemGroup.m: New files.
	* Source/GNUmakefile: Add new files.
	* Headers/AppKit/NSToolbarItem.h: Add 10.5 methods and constants.
	* Source/NSToolbarItem.m: New methods and general rewrite.

2008-12-29 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSInfoPanel.m:
	Update name of current theme when it changes.
	* Source/GSThemeInspector.m:
	Display theme version number.

2008-12-29 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBrowser.m:
	* Source/NSPopUpButtonCell.m:
	* Source/NSBox.m:
	* Source/NSComboBoxCell.m:
	* Source/NSScrollView.m:
	* Headers/Additions/GNUstepGUI/GSTheme.h:
	Make code clearer by removing function and replacing it with
	method call so you can see what's actually going on and also